# LiveNotebookLM

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml
app/: .env.example  __init__.py  config.py  create_pinecone_index.py  embedding_service.py  gcs_backup.py  gcs_store.py  live_runtime.py  live_smoke_test.py  main.py  memory_manager.py  schemas.py  session_store.py  smoke_test.py  source_processor.py  source_store.py  test_pinecone_retriever.py  test_vertex_embeddings.py  web_search_service.py  ws_handlers.py
app/.adk/: session.db
app/live_notebook_agent/: __init__.py  agent.py  config.py  prompts.py
app/routes/: __init__.py  backup.py  deps.py  recap.py  sessions.py  sources.py  voices.py
app/static/: index.html  live.js  mic-processor.js  restore.html
app/test/: test_agents_smoke.py  test_index_uploaded_source.py  test_live_ws.py  test_live_ws_real_audio.py  test_ws_ping.py
sessions/067c3f3a-504a-4937-9b5f-784c408407ea/: session.json
sessions/16f55897-dcc5-4773-9063-1a3c45b1eafc/: memory.json  messages.json  session.json  sources.json
sessions/4ecddccd-1752-4af1-8cd5-1fa8492697da/: memory.json  messages.json  session.json  sources.json
sessions/8ba42708-a490-46ab-be3a-903fb0d00951/: session.json  sources.json
sessions/8f0927bc-3792-421d-866b-878fb115c8d7/: memory.json  session.json
sessions/96ecbb7d-2a9e-4bf4-9ed1-65e0b500f5de/: memory.json  messages.json  session.json  sources.json
sessions/a778ddb7-4dbe-4a7a-8c3c-685d3669e0f3/: session.json
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+38 files in other folders)
